parser/parser_tests/tests_input/unit/good/Good40.ty
singleton class RandomGenerator { 
    
    values: {
        randomInt: Int = 338894;
    }
    
    functions: {
        generate: () -> Int = this.getRandomInt()
    
        private getRandomInt: () -> Int = this.randomInt
    }
}
