parser/parser_tests/tests_input/unit/bad/Bad09.ty
singleton class RandomGenerator { 
    
    functions: {
        generate: () -> Int = {
            nextInt()
        }
    }
}
